@@ -26,6 +26,9 @@ New features:
 * David Fries added option 'ssh-options' to pass additional options to
   ssh.
 
+* David Fries changed restore to set the group ownership if possible
+  even when not root.  No warnings are issued if the attempt fails.
+
 Bug fixes:
 
 * The Obnam SFTP plugin would loop infinitely if it lost the
